# My991CNX

./: .gitignore  .gitmodules  991CNX_report.md  CMakeLists.txt  EvalPopUpWidget.cpp  EvalPopUpWidget.h  EvalPopUpWidget.ui  MJaxAdaptor.cpp  MJaxAdaptor.h  README.md  TexSvg.cpp  TexSvg.h  demo5.pro  dialog_intro.cpp  dialog_intro.h  dialog_intro.ui  exptree.cpp  exptree.h  history_memory.cpp  history_memory.h  integral.cpp  integral.h  main.js  mainplot.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_.cpp  mainwindow_.h  mainwindow_.ui  plot.cpp  plot.h  plotwindow.cpp  plotwindow.h  plotwindow.ui  plotwindow.ui.bak  resources.qrc  saveinput.cpp  saveinput.h
src/: exptree.cpp  exptree.h  main.cpp
